# etl-yt-music-aws

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: app.py  cfg.py  constants.py  models.py  yt_api.py
